--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 	<p class="lessonstrack">Lessons followed were manually tracked</p>
 	<p class="emotionstrack">Feelings tracked with Stigma</p>
 
-	<object id="happiness" data="happy.svg" type="image/svg+xml"></object>
+	<object id="happiness" data="images/happy.svg" type="image/svg+xml"></object>
 
-	<object id="morning" data="morning.svg" type="image/svg+xml"></object>
+	<object id="morning" data="images/morning.svg" type="image/svg+xml"></object>
 	<input type="range" min="0" max="2" value="0" id="slider">
-	<img src="night.jpg" id="eve" />
+	<img src="images/night.jpg" id="eve" />
 
 	<div id="controls">
 		<button class="updatePrev"><</button>
@@ -70,14 +70,14 @@
 
 		<button class="back">back</button>
 
-		<object id="summary1" data="summary1.svg" type="image/svg+xml"></object>
+		<object id="summary1" data="images/summary1.svg" type="image/svg+xml"></object>
 
 
 
 	</div>
 
 
-	<script src="../d3.min.js"></script>
+	<script src="d3.min.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
